src/main/webapp/style.css
body {
  font-family: Roboto;
  margin: 0;
  padding: 0;
}

h1 {
  margin: 0;
  margin-bottom: 5px;
  font-size: 1.6rem;
}

#map-container {
  width: 100vw;
  height: 100vh;
}

#right-tab {
  position: absolute;
  top: 0;
  right: 0;
  width: 30vw;
}

/* Always set the map height explicitly to define the size of the div
 * element that contains the map. */
#map {
  height: 100%;
}

#description {
  font-family: Roboto;
  font-size: 15px;
  font-weight: 300;
}

#infowindow-content .title {
  font-weight: bold;
}

#infowindow-content {
  display: none;
}

#map #infowindow-content {
  display: inline;
}

#pac-card {
  margin: 10px;
  padding: 20px;
  border-radius: 8px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  outline: none;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  background-color: #fff;
}

#pac-input {
  padding: .5rem;
  font-size: 1rem;
  font-weight: 300;
  text-overflow: ellipsis;
  width: 25vw;
}

#pac-input:focus {
  border-color: #4d90fe;
}

#pac-container {
  display: flex;
  margin-top: 5px;
}

#restaurant-filter {
  padding: 0;
  width: 100%;
}

#restaurant-filter fieldset {
  padding: .5rem;
  margin: 0;
}

#submit-button {
  width: 100px;
  margin: 0;
  margin-left: 5px;
  margin-top: .5rem;

  background-color: #4d90fe;
  border: none;
  border-radius: 5px;
  color: white;
  padding: 10px;
  text-align: center;
  display: inline-block;
  font-size: 1rem;
}

#result-container {
  margin: 10px;
  padding: 20px;
  border-radius: 8px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  outline: none;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  background-color: #fff;
}

#restaurant-list {
  list-style: none;
  padding: 0;
  margin: 0;
}

#restaurant-list li {
  padding: 10px;
  background-color: #E3F2FD;
  margin: 10px 0;
  border-radius: 8px;
  cursor: pointer;
}

#restaurant-list li:hover {
  background-color: #BBDEFB;
}

#restaurant-list .selected {
  background: #FFCC80;
}

#restaurant-list .selected:hover {
  background: #FFB74D;
}

#restaurant-list h3 {
  font-weight: bold;
  font-size: 1.1rem;
  margin: 0;
  padding: 0;
}

